# rs_dream_player

./: '  .gitignore  .info  Cargo.toml  doc.md  readme.md
.cargo/: config.toml
api/: Cargo.toml
api/src/: bridge.rs  lib.rs  player.rs  playlist.rs
audio/: Cargo.toml
audio/src/: audio_engine.rs  lib.rs  player.rs  player_core.rs  source_callback.rs  types.rs
audio/src/playlist/: mod.rs
audio/src/song/: mod.rs  track.rs  track_virtual.rs
audio_structs/: Cargo.toml
audio_structs/src/: cover_art.rs  lib.rs  mod.rs  playlist.rs  track.rs  track_metadata.rs  track_virtual.rs
dbus/: Cargo.toml
dbus/src/: lib.rs  linux.rs
dbus/src/traits/: dbus.rs
index/: Cargo.toml
index/src/: structs.rs
notify_hub/: Cargo.toml
player/: Cargo.toml
player/src/: lib.rs  player.rs  playlist.rs
player/src/song/: audio_event.rs  metadata.rs  mod.rs  track.rs  virtual_song.rs
selfrun/: Cargo.toml
src/: config.rs  main.rs  orchestrator.rs  playlist_manager.rs
src/api/: mod.rs
src/audio/: cmds.rs  dbus.rs  metadata.rs  mod.rs  player.rs  playlist.rs  song.rs  track.rs  types.rs
src/audio/dbus/: linux.rs  mod.rs
src/audio/index/: mod.rs  structs.rs
src/audio/song/: metadata.rs  mod.rs  track.rs  virtual_song.rs
src/music/: mod.rs  playlist.rs  track.rs  track_metadata.rs  track_virtual.rs
src/orchestrator/: dbus.rs  engine.rs  errors.rs  manager.rs  mod.rs
src/storage/: config.rs  index.rs  index_autocreate.rs  mod.rs
src/traits/: indexable.rs  mod.rs  player_agent_os.rs
storage/: Cargo.toml
storage/src/: db.rs  events.rs  lib.rs  schema.rs
storage/src/traits/: indexator.rs  mod.rs
tests/: metadata_flow.rs
tui/: Cargo.toml
tui/src/: lib.rs  model.rs
tui/src/tabs/: editor.rs  help.rs  invalid_prompt.rs  meta_editor.rs  mod.rs  playlists.rs  settings.rs  song.rs
