[package]
name = "dream_player"
version = "0.1.1"
edition = "2024"

[workspace]
members = ["audio", "api", "audio_structs", "dbus", "storage", "tui"]
resolver = "2"

[workspace.dependencies]
api = { path = "api" }
audio = { path = "audio" }
audio_structs = { path = "audio_structs" }
dbus = { path = "dbus" }
storage = { path = "storage" }
tui = { path = "tui" }

[features]
default = []
with_tui = []

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
clap = { version = "4.6.0", features = ["derive"] }
directories = "6.0.0"
lofty = "0.24.0"

api = { workspace = true }
audio = { workspace = true }
audio_structs = { workspace = true }
dbus = { workspace = true }
storage = { workspace = true }
tui = { workspace = true }


rusqlite = { version = "0.40.1", features = ["bundled"] }
fastrand = "2.4.1"

[dev-dependencies]
tempfile = "3.24.0"
serial_test = "3.3.1"
get-size = "0.1.4"
